修正图片路径
本地化存储图片

--- a/主文档/体素相关概念.md
+++ b/主文档/体素相关概念.md
@@ -5,7 +5,7 @@
 
 ##  什么是体素
 
-![Cubes and marching cubes](https://voxel-tools.readthedocs.io/en/latest/images/cubes_and_marching_cubes.webp)
+![Cubes and marching cubes](./体素相关概念.assets/cubes_and_marching_cubes.webp)
 
 
 “体素”是“体积图片元素”的缩写，类似于“像素”，意思是“图片元素”。它们组成体积，而不是简单的 2D 图像，这允许制作 3D 地形或 3D 模型。它们不像经典的基于多边形的模型那样仅表示对象的表面，还表示空间的每个点的内部。
@@ -49,7 +49,7 @@
 
 ##  存储体素
 
-![Block map storage schema](https://voxel-tools.readthedocs.io/en/latest/images/block_map_storage.webp)
+![Block map storage schema](./体素相关概念.assets/block_map_storage.webp)
 
 
 即使它需要大量内存，我们仍然必须在某个时候存储体素数据。这对于传递体素、存储无法使用生成器复制的玩家编辑或将地形保存到磁盘非常重要。
@@ -73,7 +73,7 @@
 
 ### 将体素保存到磁盘
 
-![Raw region file seen as an image](https://voxel-tools.readthedocs.io/en/latest/images/region_file_seen_as_image.png)
+![Raw region file seen as an image](./体素相关概念.assets/region_file_seen_as_image.png)
 
 
 当玩家对世界进行编辑时，或者当您想在编辑器中雕刻地形并保存更改时，有必要将体素保存到磁盘。
@@ -83,7 +83,7 @@
 
 ## 将体素转换为网格
 
-![Cubes and wireframe](https://voxel-tools.readthedocs.io/en/latest/images/cubes_and_wireframe.webp)
+![Cubes and wireframe](./体素相关概念.assets/cubes_and_wireframe.webp)
 
 
 当今的显卡功能越来越强大，但平均而言，多边形（网格）仍然是渲染 3D 模型的最快方式。所以我们不会真的直接画体素。相反，我们必须将它们转换为多边形，然后进行渲染。为此，此引擎使用名为VoxelMesher的资源。
@@ -109,7 +109,7 @@
 
 ## 将其与节点放在一起
 
-![Game screenshots](https://voxel-tools.readthedocs.io/en/latest/images/game_examples.webp)
+![Game screenshots](./体素相关概念.assets/game_examples.webp)
 
 
 到目前为止，我们可以认为有足够的工具在游戏中使用体素。不过，从那里开始需要做更多的工作。
