--- a/主文档/块状地形.md
+++ b/主文档/块状地形.md
@@ -28,7 +28,7 @@
 
 更容易 `VoxelBlockyLibrary` 开始使用 。
 
-![Screenshot of the list of voxels in VoxelBlockyLibrary](https://voxel-tools.readthedocs.io/en/latest/images/voxel_library_voxels_list.webp)
+![Screenshot of the list of voxels in VoxelBlockyLibrary](./块状地形.assets/voxel_library_voxels_list.webp)
 
 
 每个插槽可以包含一个 `VoxelBlockyModel` 资源。左侧显示的索引将是他们在体素数据中使用的 ID。体素是一种特例：按照惯例，它可以用作默认的“空气”体素 `0` 。您可以为每个插槽分配一个新 `VoxelBlockyModel` 资源，并填写其属性。
@@ -49,7 +49,7 @@
 
 使用 `VoxelMesherBlocky` ，建议使用纹理图集，以允许重复使用材质并减少绘制调用的次数。您可以创建一个包含体素可以使用的所有图块的纹理。例如，这是块状游戏演示中的一个：
 
-![Atlas used in the blocky game demo](https://voxel-tools.readthedocs.io/en/latest/images/blocky_game_atlas.webp)
+![Atlas used in the blocky game demo](./块状地形.assets/blocky_game_atlas.webp)
 
 
 此图集是方形纹理，最多可以包含 16x16 个图块。此数字很重要，需要在 `atlas_size_in_tiles` 属性上 `VoxelBlockyModelCube` 设置，以便可以正确生成纹理坐标。
@@ -57,12 +57,12 @@
 
 立方体模型的每个面上可以有不同的图块。您可以通过在 `Cube tiles` 类别下分配 的属性 `Voxel` 来决定使用哪一个。此处的坐标以图块为单位，而不是像素。
 
-![Voxel cube tile properties screenshot](https://voxel-tools.readthedocs.io/en/latest/images/voxel_cube_tiles_properties.webp)
+![Voxel cube tile properties screenshot](./块状地形.assets/voxel_cube_tiles_properties.webp)
 
 
 例如，如果要使用“木板”图块，则可以使用 x=3 和 y=1：
 
-![Tile coordinates](https://voxel-tools.readthedocs.io/en/latest/images/cube_tile_coordinates.webp)
+![Tile coordinates](./块状地形.assets/cube_tile_coordinates.webp)
 
 
 到目前为止，我们定义了一个立方体素，其面上有特定的纹理坐标，但我们仍然需要实际分配用于渲染它的纹理和材质。这可以在该 `Material overrides` 部分中完成，您可以在其中指定带有纹理的材质。
@@ -70,7 +70,7 @@
 
 确保将其 `albedo_texture` 分配给您的纹理。您也可以检查该 `Vertex Color/Use as albedo` 属性，因为这将允许网格器在立方体边缘烘烤环境光遮蔽。
 
-![Material for blocky terrain](https://voxel-tools.readthedocs.io/en/latest/images/material_blocky_game.webp)
+![Material for blocky terrain](./块状地形.assets/material_blocky_game.webp)
 
 
 每个模型都可以使用具有不同纹理的不同材质，但请记住，重复使用材质越多越好。它减少了绘制调用的数量，并使渲染速度更快。
@@ -83,7 +83,7 @@
 
 使用 `Cube` 几何体创建体素类型是可用于简单体素的快捷方式，但最通用的工作流程是使用实际网格。如果使用 `VoxelBlockyModelMesh` ，则可以改为分配网格资源。这些 `Cube tiles` 属性不可用，因为您必须在 3D 建模器（如 Blender）中分配网格的纹理坐标。
 
-![Blender screenshot for UV editing a block](https://voxel-tools.readthedocs.io/en/latest/images/blender_block_uv_mapping.webp)
+![Blender screenshot for UV editing a block](./块状地形.assets/blender_block_uv_mapping.webp)
 
 
 网格可以具有您想要的任何形状，但是需要遵守一些约束：
@@ -99,7 +99,7 @@
 -     
     位于 1x1x1 单元立方体侧面的面将是唯一可以被网格划分器剔除的面。确保它们完美排列。如果不这样做，则由于生成的几何体数量未被剔除，可能会导致速度急剧下降。
 
-![Blender screenshot for face lining up with cube side](https://voxel-tools.readthedocs.io/en/latest/images/blender_face_cube_side.webp)
+![Blender screenshot for face lining up with cube side](./块状地形.assets/blender_face_cube_side.webp)
 
 
 用于导出网格的最佳格式是 OBJ。 Godot 默认将此格式作为网格资源导入。其他格式不适合，因为Godot将它们作为场景导入，而 `VoxelBlockyModelMesh` 资源需要网格，而不是场景。您也可以选择从此处导出材质，但建议在Godot中进行，因为它允许您重复使用它们。
@@ -135,7 +135,7 @@
 
 目前，不支持自动旋转或翻转体素，因此您必须为某种类型的体素创建可能需要的每个旋转版本。但是，可以使用检查器中的旋转按钮在编辑器中创建这些模型变体：
 
-![Model preview in inspector with rotation buttons](https://voxel-tools.readthedocs.io/en/latest/images/model_preview_with_rotation_buttons.webp)
+![Model preview in inspector with rotation buttons](./块状地形.assets/model_preview_with_rotation_buttons.webp)
 
 
 这些按钮不是用于预览的，它们实际上是旋转模型的，当放置在游戏中时，它将出现在该旋转中。
@@ -156,7 +156,7 @@
 
 `VoxelBlockyModel` 资源也具有 `transparency_index` 属性。此属性允许调整两个体素如何遮挡其面部。例如，假设您有两个透明的体素，玻璃和树叶。默认情况下，如果您将它们并排放置，它们共享的面将被剔除，从而允许您从玻璃块上看到叶子：
 
-![Screenshot of transparency index not being exploited](https://voxel-tools.readthedocs.io/en/latest/images/transparency_index_example1.webp)
+![Screenshot of transparency index not being exploited](./块状地形.assets/transparency_index_example1.webp)
 
 
 如果两个面相互接触，如果它们具有相同的透明度指数，它们可能会被剔除。但如果它们的透明度指数不同，他们可能不会。这允许直接看到玻璃后面的叶子，而不是看到内部。
@@ -164,7 +164,7 @@
 
 在这里，玻璃 的`transparency_index=2`，叶子的 `transparency_index=1` ：
 
-![Screenshot of transparency index being exploited](https://voxel-tools.readthedocs.io/en/latest/images/transparency_index_example2.webp)
+![Screenshot of transparency index being exploited](./块状地形.assets/transparency_index_example2.webp)
 
 
 `VoxelBlockyModel` 还有一个 `culls_neighbors` 属性。此功能默认处于启用状态，可防止不必要地渲染相邻体素侧。但是，对于某些透明体素，可能更可取的是始终渲染相邻的体素侧。例如，如果所有内部体素侧都可见，则可以使植物看起来更密集。
@@ -172,12 +172,12 @@
 
 这是一组叶子（ `culls_neighbors=true` 默认值）：
 
-![Screenshot of leaves with culls_neighbors set to true](https://voxel-tools.readthedocs.io/en/latest/images/culls_neighbors_enabled.webp)
+![Screenshot of leaves with culls_neighbors set to true](./块状地形.assets/culls_neighbors_enabled.webp)
 
 
 这是同一组叶子与 `culls_neighbors=false` .体素之间的两侧被渲染，使这组叶子看起来不那么空心。
 
-![Screenshot of leaves with culls_neighbors set to false](https://voxel-tools.readthedocs.io/en/latest/images/culls_neighbors_disabled.webp)
+![Screenshot of leaves with culls_neighbors set to false](./块状地形.assets/culls_neighbors_disabled.webp)
 
 ###  随机报价
 
@@ -207,7 +207,7 @@
 
 将属性分配给类型后，检查器将显示每个状态组合的模型列表：
 
-![Variant models list](https://voxel-tools.readthedocs.io/en/latest/images/type_variant_models.webp)
+![Variant models list](./块状地形.assets/type_variant_models.webp)
 
 
 您还可以使用检查器顶部文字 3D 预览旁边的侧面板预览组合。
